ch: add user seeder
